djvusmooth (0.2.12) UNRELEASED; urgency=low

  * Install desktop file.
  * Update the Russian translation, thanks to Kyrill Detinov.
  * Rename menu item “Edit → Outline → Remove” to “… → Remove all”.
    Thanks to Maxim Leyenson for the bug report.

 -- Jakub Wilk <jwilk@jwilk.net>  Thu, 29 Mar 2012 20:59:45 +0200

djvusmooth (0.2.11) unstable; urgency=low

  * Let the setup.py script build and install binary message catalogs.
  * Don't throw exceptions when using “Fit width”, “Fit height” and “Stretch”
    zoom factors and no page is shown. Thanks to Sherwin Singer for the bug
    report.
  * Fix a typo in the manual page.

 -- Jakub Wilk <jwilk@jwilk.net>  Sun, 11 Dec 2011 22:57:54 +0100

djvusmooth (0.2.10) unstable; urgency=low

  * Let the setup.py script build and install manual pages. Thanks to Kyrill
    Detinov and Markus Baertschi for bug reports.
  * Fix the code that was supposed to disable the GUI while an external editor
    is running. Thanks to Mike Thiery for the bug report.
  * Fix the manual page: djvusmooth uses XDG_CONFIG_HOME rather than
    XDG_DATA_HOME.

 -- Jakub Wilk <jwilk@jwilk.net>  Fri, 18 Feb 2011 12:13:43 +0100

djvusmooth (0.2.9) unstable; urgency=low

  * Improve support for non-POSIX systems:
    + Windows: guess location of DjVuLibre DLLs and tools (requires
      python-djvulibre ≥ 0.3.3).
    + Windows: use the “Application Data” folder to store configuration files
      (unless the XDG_CONFIG_HOME environment variable is set).
    + Don't read configuration from ~/.DjVuSmooth (which is deprecated
      location anyway).
    + Don't rely on atomic renames when saving configuration files.
  * Reset the SIGCHLD signal to SIG_IGN on start. Thanks to Heinrich
    Schwietering for the bug report.
    http://bugs.debian.org/596232
  * Fix support for external editors that use the overwrite-by-rename
    technique. Thanks to Markus Baertschi for the bug report.

 -- Jakub Wilk <jwilk@jwilk.net>  Wed, 19 Jan 2011 21:07:53 +0100
