@@ -1,5 +1,5 @@
 # encoding=UTF-8
-# Copyright © 2009, 2010, 2011 Jakub Wilk <jwilk@jwilk.net>
+# Copyright © 2009, 2010, 2011, 2012 Jakub Wilk <jwilk@jwilk.net>
 #
 # This package is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -13,13 +13,42 @@
 import errno
 import os
 
-from xdg import BaseDirectory as xdg
+class xdg(object):
+    '''
+    tiny replacement for PyXDG's xdg.BaseDirectory
+    '''
 
-if os.name == 'nt':
-    # On Windows, use the “Application Data” folder if XDG_CONFIG_HOME is
-    # not set.
-    if ('XDG_CONFIG_HOME' not in os.environ) and ('APPDATA' in os.environ):
-        xdg.xdg_config_home = os.environ['APPDATA']
+    xdg_config_home = os.environ.get('XDG_CONFIG_HOME') or ''
+    if os.name == 'nt' and xdg_config_home == '':
+        # On Windows, use the “Application Data” folder if XDG_CONFIG_HOME is
+        # not set.
+        xdg_config_home = os.environ.get('APPDATA') or ''
+
+    if not os.path.isabs(xdg_config_home):
+        xdg_config_home = os.path.join(os.path.expanduser('~'), '.config')
+
+    xdg_config_dirs = os.environ.get('XDG_CONFIG_DIRS') or '/etc/xdg'
+    xdg_config_dirs = (
+        [xdg_config_home] + \
+        filter(os.path.abspath, xdg_config_dirs.split(os.path.pathsep))
+    )
+
+    @classmethod
+    def save_config_path(xdg, resource):
+        path = os.path.join(xdg.xdg_config_home, resource)
+        try:
+            os.makedirs(path, 0700)
+        except OSError:
+            if not os.path.isdir(path):
+                raise
+        return path
+
+    @classmethod
+    def load_config_paths(xdg, resource):
+        for config_dir in xdg.xdg_config_dirs:
+            path = os.path.join(config_dir, resource)
+            if os.path.exists(path):
+                yield path
 
 class Config(object):
 
