@@ -4,8 +4,9 @@ djvusmooth (0.2.12) UNRELEASED; urgency=low
   * Update the Russian translation, thanks to Kyrill Detinov.
   * Rename menu item “Edit → Outline → Remove” to “… → Remove all”.
     Thanks to Maxim Leyenson for the bug report.
+  * Use our own minimal XDG Base Directory implementation instead of PyXDG.
 
- -- Jakub Wilk <jwilk@jwilk.net>  Thu, 29 Mar 2012 20:59:45 +0200
+ -- Jakub Wilk <jwilk@jwilk.net>  Wed, 18 Apr 2012 18:02:43 +0200
 
 djvusmooth (0.2.11) unstable; urgency=low
 
